--- a/store.html
+++ b/store.html
@@ -33,7 +33,7 @@
         <p class="pinkify"><a target="_blank" href="https://soundcloud.com/curiosityshoppp">Soundcloud &#128266</a></p>
         <p class="pinkify"><a target="_blank" href="https://www.twitch.tv/curiosity_shop" >Twitch &#127918</a></p>
     </div>
-    <p id="message" class="displaytitle black center hiddentext"><!-- There is one letter here to make box full height to the right -->t</p>
+    <!-- <p id="message" class="displaytitle black center hiddentext">There is one letter here to make box full height to the rightt</p> -->
     <div class="displayrow">
         <div class="displaycol left">
             <div class="displaycase">
@@ -84,7 +84,7 @@ var three_js_container_1 = document.getElementById("three_js_container_1");
 // var tribal = document.getElementById("tribaldiv");
 
 repositionElements();
-waitToType();
+// waitToType();
 
 function repositionElements(){
     three_js_container_1.style.width = "" + window.innerWidth + "px";
